--- a/resources/sass/components/_button.scss
+++ b/resources/sass/components/_button.scss
@@ -27,7 +27,7 @@
     border: none;
     outline: none;
     background-color: transparent;
-    margin: 0.48rem 0.4rem;
+    margin: 0.45rem 0.4rem;
     padding: 0.85rem 1.8rem ;
     color: var(--light-one);
     text-transform: uppercase;
