--- a/resources/sass/layout/_grid.scss
+++ b/resources/sass/layout/_grid.scss
@@ -57,7 +57,7 @@
     width: 100%;
     margin: 1.5rem 0;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .grid-item
